<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c8f4ef"
    android:gravity="center">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="292dp"
        android:layout_height="54dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/passwordLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/globe"
        app:hintTextAppearance="@style/HintColour">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Email"
            android:theme="@style/EditTextTheme"
            android:inputType="textEmailAddress"
            tools:ignore="HardcodedText" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="292dp"
        android:layout_height="54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLayout"
        app:hintTextAppearance="@style/HintColour">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:theme="@style/EditTextTheme"
            android:hint="Password"
            android:inputType="textPassword"
            android:singleLine="false"
            tools:ignore="HardcodedText" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/logInButton"
        android:layout_width="194dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:background="#64dad2"
        android:text="Login"
        android:textAllCaps="true"
        android:textColor="#FFFF"
        app:layout_constraintBottom_toTopOf="@+id/forgottenPasswordButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLayout"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="153dp"
        android:layout_height="31dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="44dp"
        android:layout_marginTop="8dp"
        android:background="#64dad2"
        android:text="Register"
        android:textColor="#FFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in__google_button"
        app:layout_constraintVertical_bias="0.384"
        tools:ignore="HardcodedText" />


    <Button
        android:id="@+id/forgottenPasswordButton"
        android:layout_width="162dp"
        android:layout_height="24dp"
        android:layout_marginBottom="8dp"
        android:background="@null"
        android:text="Forgotten password"
        android:textAllCaps="false"
        android:textColor="@android:color/tab_indicator_text"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInButton"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="HardcodedText" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="193dp"
        android:layout_height="52dp"
        android:gravity="center"
        android:text="@string/google_sign_in"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/sign_in__google_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgottenPasswordButton" />


    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in__google_button"
        android:layout_width="271dp"
        android:layout_height="45dp"
        android:layout_marginBottom="20dp"
        android:background="#64dad2"
        app:layout_constraintBottom_toTopOf="@+id/noAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/noAccount"
        android:layout_width="150dp"
        android:layout_height="24dp"
        android:layout_marginBottom="16dp"
        android:text="Don't have an account?"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signUpButton"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText" />

    <ImageView
        android:id="@+id/globe"
        android:contentDescription="@null"
        android:layout_width="323dp"
        android:layout_height="228dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.818"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.103"
        app:srcCompat="@drawable/globecoins" />

    <ImageView
        android:id="@+id/imageView3"
        android:contentDescription="@null"
        android:layout_width="326dp"
        android:layout_height="114dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.675"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.179"
        app:srcCompat="@drawable/coins_title" />


</android.support.constraint.ConstraintLayout>