...

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="game_rules">GAME RULES\n\nWelcome to the wonderful world of Coinz! Here you can collect coins of 4 different virtual currencies (QUID, DOLR, SHIL and PENY) scattered on the map, store them in your Bank as GOLD coins and become the richest person! You can send coins to friends or steal coins from enemies. Your goal is to become first in the Ranking list. To help you on the road to
    <string name="treasure_unlocked">Congratulations, you have found a map leading to a hidden tresure! In late December 1803 a ship called El Pensamiento allegedly made its way secretely into Leith Harbour. It is believed to have carried millions of pounds\' worth of gold, silver, and jewels. This treasure went missing but some believe it was transferred somewhere by Sir Francis Mollison. Go ther
...
