...
            android:background="#64aca4"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include
        android:id="@+id/include2"
        layout="@layout/content_navigation_drawer"
        android:layout_width="wrap_content"
        android:layout_height="655dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent" />

...
